fix some pathing

--- a/about.html
+++ b/about.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachlan Gibson - About</title>
-    <link rel="stylesheet" href="./styles/nav.css" />
-    <link rel="stylesheet" href="./styles/about.css" />
-    <link rel="icon" href="./images/logo.svg" />
+    <link rel="stylesheet" href="/styles/nav.css" />
+    <link rel="stylesheet" href="/styles/about.css" />
+    <link rel="icon" href="/images/logo.svg" />
   </head>
   <body>
     <header>
       <nav>
         <div>
-          <img id="navbar-icon" src="./images/logo.svg" alt="Lachlan Gibson" />
+          <img id="navbar-icon" src="/images/logo.svg" alt="Lachlan Gibson" />
           <span id="lachlan-nav-text">Lachlan Gibson</span>
         </div>
         <a href="/">Home</a>
