update foobar blog, add footers

--- a/about.html
+++ b/about.html
@@ -95,5 +95,8 @@
         </p>
       </section>
     </main>
+    <footer>
+      <span>&copy; Copyright 2023 Lachlan Gibson</span>
+    </footer>
   </body>
 </html>
